--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </ul>
       </nav>
     </header>
-    <main class="wrapper-main">
-      <section class="wrapper wrapper-bottom">
-        <h3 class="caption">We work with</h3>
+    <main class="wrapper">
+      <section class="wrapper-bottom">
+        <h2 class="caption">We work with</h2>
         <h2 class="sub-caption">amazing services</h2>
         <ul class="features">
           <li class="features-list">
@@ -51,7 +51,7 @@
               height="32"
             />
             <div class="sub-features">
-              <h4 class="title">photography</h4>
+              <h3 class="title">photography</h3>
               <p class="title-item">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
                 sit?
@@ -141,7 +141,7 @@
           </li>
         </ul>
       </section>
-      <section class="wrapper">
+      <section>
         <h3 class="caption">Who we are</h3>
         <h2 class="sub-caption">meet our team</h2>
         <p class="sub-caption-item title-item">
@@ -153,47 +153,48 @@
         <ul class="team-caption-top">
           <li>
             <div class="team-caption">
-              <img 
+              <img
                 src="img/Layer-16.jpg"
                 alt="graphic-designer"
                 width="380"
                 height="470"
               />
-              <div class="background"></div>
-              <ul class="icons">
-                <li class="icons-item">
-                  <img
-                    src="/img/facebook.png"
-                    alt="facebook"
-                    width="13"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/twitter.png"
-                    alt="facebook"
-                    width="22"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/pinterest.png"
-                    alt="facebook"
-                    width="21"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/instagram.png"
-                    alt="facebook"
-                    width="26"
-                    height="26"
-                  />
-                </li>
-              </ul>
+              <div class="background">
+                <ul class="icons">
+                  <li class="icons-item">
+                    <img
+                      src="/img/facebook.png"
+                      alt="facebook"
+                      width="13"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/twitter.png"
+                      alt="facebook"
+                      width="22"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/pinterest.png"
+                      alt="facebook"
+                      width="21"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/instagram.png"
+                      alt="facebook"
+                      width="26"
+                      height="26"
+                    />
+                  </li>
+                </ul>
+              </div>
             </div>
             <h4 class="title name">mathew dix</h4>
             <p class="subname">Graphic Design</p>
@@ -206,41 +207,42 @@
                 width="380"
                 height="470"
               />
-              <div class="background"></div>
-              <ul class="icons">
-                <li class="icons-item">
-                  <img
-                    src="/img/facebook.png"
-                    alt="facebook"
-                    width="13"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/twitter.png"
-                    alt="facebook"
-                    width="22"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/pinterest.png"
-                    alt="facebook"
-                    width="21"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/instagram.png"
-                    alt="facebook"
-                    width="26"
-                    height="26"
-                  />
-                </li>
-              </ul>
+              <div class="background">
+                <ul class="icons">
+                  <li class="icons-item">
+                    <img
+                      src="/img/facebook.png"
+                      alt="facebook"
+                      width="13"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/twitter.png"
+                      alt="facebook"
+                      width="22"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/pinterest.png"
+                      alt="facebook"
+                      width="21"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/instagram.png"
+                      alt="facebook"
+                      width="26"
+                      height="26"
+                    />
+                  </li>
+                </ul>
+              </div>
             </div>
             <h4 class="title name">christopher campbell</h4>
             <p class="subname">Branding/UX design</p>
@@ -253,41 +255,42 @@
                 width="380"
                 height="470"
               />
-              <div class="background"></div>
-              <ul class="icons">
-                <li class="icons-item">
-                  <img
-                    src="/img/facebook.png"
-                    alt="facebook"
-                    width="13"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/twitter.png"
-                    alt="facebook"
-                    width="22"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/pinterest.png"
-                    alt="facebook"
-                    width="21"
-                    height="26"
-                  />
-                </li>
-                <li class="icons-item">
-                  <img
-                    src="/img/instagram.png"
-                    alt="facebook"
-                    width="26"
-                    height="26"
-                  />
-                </li>
-              </ul>
+              <div class="background">
+                <ul class="icons">
+                  <li class="icons-item">
+                    <img
+                      src="/img/facebook.png"
+                      alt="facebook"
+                      width="13"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/twitter.png"
+                      alt="twitter"
+                      width="22"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/pinterest.png"
+                      alt="facebook"
+                      width="21"
+                      height="26"
+                    />
+                  </li>
+                  <li class="icons-item">
+                    <img
+                      src="/img/instagram.png"
+                      alt="instagram"
+                      width="26"
+                      height="26"
+                    />
+                  </li>
+                </ul>
+              </div>
             </div>
             <h4 class="title name">michael fertig</h4>
             <p class="subname">Developer</p>
@@ -295,8 +298,8 @@
         </ul>
       </section>
     </main>
-    <footer class="footer wrapper">
-      <p>&#169 2016 MoGo free PSD template by <span class="last"> Laaqiq</span></p>
+    <footer class="footer wrapper-footer">
+      <p> &#169 2016 MoGo free PSD template by <span class="last"> Laaqiq</span></p>
       <div class="subscribe-button">
         <input class="emal" type="text" name="" value="Your Email..." />
         <button class="button"><p>subscribe</p></button>
