--- a/index.html
+++ b/index.html
@@ -162,36 +162,39 @@
               <div class="background">
                 <ul class="icons">
                   <li class="icons-item">
-                    <img
+                    <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
                       src="/img/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
                       src="/img/twitter.png"
                       alt="facebook"
                       width="22"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
                       src="/img/pinterest.png"
                       alt="facebook"
                       width="21"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
                       src="/img/instagram.png"
                       alt="facebook"
                       width="26"
                       height="26"
-                    />
+                    /></a>
                   </li>
                 </ul>
               </div>
@@ -210,36 +213,39 @@
               <div class="background">
                 <ul class="icons">
                   <li class="icons-item">
-                    <img
+                    <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
                       src="/img/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
                       src="/img/twitter.png"
                       alt="facebook"
                       width="22"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
                       src="/img/pinterest.png"
                       alt="facebook"
                       width="21"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
                       src="/img/instagram.png"
                       alt="facebook"
                       width="26"
                       height="26"
-                    />
+                    /></a>
                   </li>
                 </ul>
               </div>
@@ -258,36 +264,39 @@
               <div class="background">
                 <ul class="icons">
                   <li class="icons-item">
-                    <img
+                    <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
                       src="/img/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
                       src="/img/twitter.png"
-                      alt="twitter"
+                      alt="facebook"
                       width="22"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
                       src="/img/pinterest.png"
                       alt="facebook"
                       width="21"
                       height="26"
-                    />
+                    /></a>
                   </li>
                   <li class="icons-item">
+                    <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
                       src="/img/instagram.png"
-                      alt="instagram"
+                      alt="facebook"
                       width="26"
                       height="26"
-                    />
+                    /></a>
                   </li>
                 </ul>
               </div>
