--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
     </header>
     <main class="wrapper">
       <section class="wrapper-bottom">
-        <h2 class="caption">We work with</h2>
-        <h2 class="sub-caption">amazing services</h2>
+       <h2>
+        <div class="caption">We work with</div>
+        <div class="sub-caption">amazing services</div>
+       </h2>
         <ul class="features">
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/alarm.jpg"
+              src="/img/icons/alarm.jpg"
               alt="alarm"
               width="32"
               height="32"
@@ -61,7 +63,7 @@
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/line- graph.jpg"
+              src="/img/icons/line-graph.jpg"
               alt="alarm"
               width="32"
               height="32"
@@ -77,7 +79,7 @@
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/pc.jpg"
+              src="/img/icons/pc.jpg"
               alt="alarm"
               width="32"
               height="32"
@@ -94,7 +96,7 @@
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/book.jpg"
+              src="/img/icons/book.jpg"
               alt="book"
               width="32"
               height="32"
@@ -110,7 +112,7 @@
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/home.jpg"
+              src="/img/icons/home.jpg"
               alt="home"
               width="32"
               height="32"
@@ -126,7 +128,7 @@
           <li class="features-list">
             <img
               class="features-list-item"
-              src="/img/image.jpg"
+              src="/img/icons/image.jpg"
               alt="image"
               width="32"
               height="32"
@@ -141,9 +143,11 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="caption">Who we are</h3>
-        <h2 class="sub-caption">meet our team</h2>
+      <section class="wrapper-team">
+        <h2>
+          <div class="caption">Who we are</div>
+          <div class="sub-caption">meet our team</div>
+        </h2>
         <p class="sub-caption-item title-item">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
           praesentium minus debitis doloribus voluptatibus beatae provident
@@ -154,7 +158,7 @@
           <li>
             <div class="team-caption">
               <img
-                src="img/Layer-16.jpg"
+                src="img/team/graphic-designer.jpg"
                 alt="graphic-designer"
                 width="380"
                 height="470"
@@ -163,7 +167,7 @@
                 <ul class="icons">
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
-                      src="/img/facebook.png"
+                      src="/img/social/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
@@ -172,8 +176,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
-                      src="/img/twitter.png"
-                      alt="facebook"
+                      src="/img/social/twitter.png"
+                      alt="twitter"
                       width="22"
                       height="26"
                     /></a>
@@ -181,8 +185,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
-                      src="/img/pinterest.png"
-                      alt="facebook"
+                      src="/img/social/pinterest.png"
+                      alt="pinterest"
                       width="21"
                       height="26"
                     /></a>
@@ -190,8 +194,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
-                      src="/img/instagram.png"
-                      alt="facebook"
+                      src="/img/social/instagram.png"
+                      alt="instagram"
                       width="26"
                       height="26"
                     /></a>
@@ -205,8 +209,8 @@
           <li>
             <div class="team-caption">
               <img
-                src="img/Layer-19.jpg"
-                alt="graphic-designer"
+                src="img/team/ux-design.jpg"
+                alt="ux-design"
                 width="380"
                 height="470"
               />
@@ -214,7 +218,7 @@
                 <ul class="icons">
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
-                      src="/img/facebook.png"
+                      src="/img/social/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
@@ -223,8 +227,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
-                      src="/img/twitter.png"
-                      alt="facebook"
+                      src="/img/social/twitter.png"
+                      alt="twitter"
                       width="22"
                       height="26"
                     /></a>
@@ -232,8 +236,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
-                      src="/img/pinterest.png"
-                      alt="facebook"
+                      src="/img/social/pinterest.png"
+                      alt="pinterest"
                       width="21"
                       height="26"
                     /></a>
@@ -241,8 +245,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
-                      src="/img/instagram.png"
-                      alt="facebook"
+                      src="/img/social/instagram.png"
+                      alt="instagram"
                       width="26"
                       height="26"
                     /></a>
@@ -256,8 +260,8 @@
           <li>
             <div class="team-caption">
               <img
-                src="img/Layer -18.jpg"
-                alt="graphic-designer"
+                src="img/team/developer.jpg"
+                alt="developer"
                 width="380"
                 height="470"
               />
@@ -265,7 +269,7 @@
                 <ul class="icons">
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://m.facebook.com" target="_blank"><img
-                      src="/img/facebook.png"
+                      src="/img/social/facebook.png"
                       alt="facebook"
                       width="13"
                       height="26"
@@ -274,8 +278,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://twitter.com" target="_blank">
                     <img
-                      src="/img/twitter.png"
-                      alt="facebook"
+                      src="/img/social/twitter.png"
+                      alt="twitter"
                       width="22"
                       height="26"
                     /></a>
@@ -283,8 +287,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.pinterest.com" target="_blank">
                     <img
-                      src="/img/pinterest.png"
-                      alt="facebook"
+                      src="/img/social/pinterest.png"
+                      alt="pinterest"
                       width="21"
                       height="26"
                     /></a>
@@ -292,8 +296,8 @@
                   <li class="icons-item">
                     <a class="sub-icons-item" href="https://www.instagram.com" target="_blank">
                     <img
-                      src="/img/instagram.png"
-                      alt="facebook"
+                      src="/img/social/instagram.png"
+                      alt="instagram"
                       width="26"
                       height="26"
                     /></a>
@@ -308,7 +312,7 @@
       </section>
     </main>
     <footer class="footer wrapper-footer">
-      <p> &#169 2016 MoGo free PSD template by <span class="last"> Laaqiq</span></p>
+      <p> &#169 2016 MoGo free PSD template by <a class="last" href="" target="_blank"> Laaqiq</a></p>
       <div class="subscribe-button">
         <input class="emal" type="text" name="" value="Your Email..." />
         <button class="button"><p>subscribe</p></button>
