--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer wrapper-footer">
+    <footer class="footer wrapper">
       <p> &#169 2016 MoGo free PSD template by <a class="last" href="" target="_blank"> Laaqiq</a></p>
       <div class="subscribe-button">
         <input class="emal" type="text" name="" value="Your Email..." />
